--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -363,6 +363,16 @@ html, body {
   color: #fc1e1e;
 }
 
+.hamburger-container .blurred-background {
+  z-index: 3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  opacity: 0.5;
+  height: 100vh;
+  width: 100vw;
+}
 .hamburger-container .hamburger-button-container {
   -webkit-box-sizing: border-box;
   /* Safari/Chrome, other WebKit */
@@ -389,6 +399,7 @@ html, body {
   cursor: pointer;
 }
 .hamburger-container .hamburger-dropdown {
+  z-index: 4;
   -webkit-box-sizing: border-box;
   /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box;
