--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -157,7 +157,8 @@ $blurred-background-opacity: 0.5;
 //===============================
 // Arithmetic (must be at bottom)
 //===============================
+// The value added at the end represents the margin between the hamburger button and the title
 $navbar-hamburger-current-view-title-left: $navbar-hamburger-button-left +
-	$navbar-hamburger-button-width;
+	$navbar-hamburger-button-width + 6px;
 $edit-item-name-centering-container-height: $edit-item-name-input-height +
 	($edit-item-name-input-border-width * 2) + ($edit-item-name-input-padding * 2);
