--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -260,16 +260,13 @@ html, body {
   background-color: black;
   height: 56px;
 }
-.navbar-container .navbar-button--invisible {
-  visibility: hidden;
-}
 .navbar-container .navbar-button--right {
   position: absolute;
   right: 0;
 }
 .navbar-container .navbar-button--breadcrumb-arrow-buffered {
-  margin-left: -29px;
-  padding-left: 29px;
+  margin-left: -30px;
+  padding-left: 30px;
 }
 .navbar-container .navbar-button__outer-text-container {
   position: relative;
@@ -306,6 +303,12 @@ html, body {
 .navbar-container .navbar-button__outer-text-container__inner-text-container--item-name {
   color: #ffff00;
   font-style: italic;
+}
+.navbar-container .navbar-button__outer-text-container__inner-text-container--breadcrumb-end {
+  margin-right: 44px;
+  border: none;
+  border-right: 2px solid black;
+  border-radius: 0 10% 10% 0;
 }
 .navbar-container .navbar-button__breadcrumb-arrow-container {
   position: relative;
@@ -368,6 +371,120 @@ dropdown can overlap all other components
 */
 .navbar-container--increased-z-index {
   z-index: 2;
+}
+
+.breadcrumb-container .breadcrumb-button {
+  position: relative;
+  float: left;
+  background-color: black;
+  height: 56px;
+}
+.breadcrumb-container .breadcrumb-button--invisible {
+  visibility: hidden;
+}
+.breadcrumb-container .breadcrumb-button--right {
+  position: absolute;
+  right: 0;
+}
+.breadcrumb-container .breadcrumb-button--breadcrumb-arrow-buffered {
+  margin-left: -30px;
+  padding-left: 30px;
+}
+.breadcrumb-container .breadcrumb-button__outer-text-container {
+  position: relative;
+  float: left;
+  height: 56px;
+}
+.breadcrumb-container .breadcrumb-button__outer-text-container__inner-text-container {
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently
+  supported by Chrome, Edge, Opera and Firefox */
+  margin: 18px 10px 0px 14px;
+  font-family: Verdana, Geneva, sans-serif;
+  font-size: 18px;
+  color: white;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.breadcrumb-container .breadcrumb-button__outer-text-container__inner-text-container--right {
+  margin-right: 14px;
+  margin-left: 10px;
+}
+.breadcrumb-container .breadcrumb-button__outer-text-container__inner-text-container--item-name {
+  color: #ffff00;
+  font-style: italic;
+}
+.breadcrumb-container .breadcrumb-button__outer-text-container__inner-text-container--breadcrumb-end {
+  margin-right: 44px;
+  border: none;
+  border-right: 2px solid black;
+  border-radius: 0 10% 10% 0;
+}
+.breadcrumb-container .breadcrumb-button__breadcrumb-arrow-container {
+  position: relative;
+  float: left;
+  height: 56px;
+  width: 30px;
+}
+.breadcrumb-container .breadcrumb-button__breadcrumb-arrow-container__arrow {
+  z-index: 4;
+  position: absolute;
+  top: -1px;
+  left: 0px;
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;
+  border-left: 30px solid gray;
+  height: 0;
+  width: 0;
+}
+.breadcrumb-container .breadcrumb-button__breadcrumb-arrow-container__border-arrow {
+  z-index: 3;
+  position: absolute;
+  top: -1px;
+  left: 2px;
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;
+  border-left: 30px solid black;
+  height: 0;
+  width: 0;
+}
+.breadcrumb-container .breadcrumb-button__breadcrumb-arrow-container__border-arrow__close-button {
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently
+  supported by Chrome, Edge, Opera and Firefox */
+  position: absolute;
+  top: -9px;
+  left: -32px;
+  color: silver;
+  opacity: 0.6;
+  font-size: 18px;
+  cursor: pointer;
+}
+.breadcrumb-container .breadcrumb-button__breadcrumb-arrow-container__border-arrow__close-button:hover, .breadcrumb-container .breadcrumb-button__breadcrumb-arrow-container__border-arrow__close-button:active {
+  opacity: 1;
+  color: #fc1e1e;
 }
 
 .hamburger-container .blurred-background,
@@ -449,23 +566,24 @@ dropdown can overlap all other components
 .js-calc-hamburger-container .hamburger-dropdown__option:active {
   background-color: #e5e5e5;
 }
+.hamburger-container .hamburger-dropdown__option__arrow-icon,
+.js-calc-hamburger-container .hamburger-dropdown__option__arrow-icon {
+  margin: 0px 6px 0px 7px;
+}
 .hamburger-container .hamburger-dropdown__option--round-bottom-border-first-button,
 .js-calc-hamburger-container .hamburger-dropdown__option--round-bottom-border-first-button {
   border-bottom: 3px solid transparent;
-  border-bottom-left-radius: 5%;
-  border-bottom-right-radius: 5%;
+  border-radius: 0 0 5% 5%;
 }
 .hamburger-container .hamburger-dropdown__option--round-bottom-border-third-button,
 .js-calc-hamburger-container .hamburger-dropdown__option--round-bottom-border-third-button {
   border-bottom: 3px solid transparent;
-  border-bottom-left-radius: 10%;
-  border-bottom-right-radius: 10%;
+  border-radius: 0 0 10% 10%;
 }
 .hamburger-container .hamburger-dropdown__option--round-bottom-border-last-button,
 .js-calc-hamburger-container .hamburger-dropdown__option--round-bottom-border-last-button {
   border-bottom: 3px solid transparent;
-  border-bottom-left-radius: 15%;
-  border-bottom-right-radius: 15%;
+  border-radius: 0 0 15% 15%;
 }
 .hamburger-container .hamburger-title,
 .hamburger-container .js-calc-hamburger-title,
