--- a/client/src/CSS/styles.scss
+++ b/client/src/CSS/styles.scss
@@ -6,6 +6,7 @@
 @use "scss_partials/home/home";
 // scss_partials/home/menu
 @use "scss_partials/home/menu/navbar";
+@use "scss_partials/home/menu/breadcrumb";
 @use "scss_partials/home/menu/hamburger";
 // scss_partials/home/account
 @use "scss_partials/home/account/accountBlurredBackground";
