--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
@@ -6,8 +6,10 @@
 	// Must be more than the item-container in item-container.scss
 	z-index: 1;
 	position: fixed;
-	top: v.$navbar-height;
-	border-bottom: v.$top-bar-border-width solid black;
+	top: v.$search-filter-sort-and-top-bar-top;
+	border: v.$top-bar-border-width solid black;
+	border-left: none;
+	border-right: none;
 	background-color: v.$search-filter-sort-bar-color;
 	height: v.$top-bar-height;
 	/* height: v.$search-filter-sort-bar-height; */
