--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -249,31 +249,27 @@ html, body {
   width: 100%;
   top: 0;
 }
-.navbar-container .navbar-component {
+.navbar-container .navbar {
   background-color: black;
   height: 56px;
   width: 100%;
 }
-.navbar-container .navbar-button {
+.navbar-container .navbar__button {
   position: relative;
   float: left;
   background-color: black;
   height: 56px;
 }
-.navbar-container .navbar-button--right {
+.navbar-container .navbar__button--right {
   position: absolute;
   right: 0;
 }
-.navbar-container .navbar-button--breadcrumb-arrow-buffered {
-  margin-left: -30px;
-  padding-left: 30px;
-}
-.navbar-container .navbar-button__outer-text-container {
+.navbar-container .navbar__button__outer-text-container {
   position: relative;
   float: left;
   height: 56px;
 }
-.navbar-container .navbar-button__outer-text-container__inner-text-container {
+.navbar-container .navbar__button__outer-text-container__inner-text-container {
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
@@ -287,7 +283,7 @@ html, body {
   user-select: none;
   /* Non-prefixed version, currently
   supported by Chrome, Edge, Opera and Firefox */
-  margin: 18px 10px 0px 14px;
+  margin: 18px 14px 0px 14px;
   font-family: Verdana, Geneva, sans-serif;
   font-size: 18px;
   color: white;
@@ -296,73 +292,13 @@ html, body {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.navbar-container .navbar-button__outer-text-container__inner-text-container--right {
+.navbar-container .navbar__button__outer-text-container__inner-text-container--right {
   margin-right: 14px;
-  margin-left: 10px;
+  margin-left: 14px;
 }
-.navbar-container .navbar-button__outer-text-container__inner-text-container--item-name {
+.navbar-container .navbar__button__outer-text-container__inner-text-container--item-name {
   color: #ffff00;
   font-style: italic;
-}
-.navbar-container .navbar-button__outer-text-container__inner-text-container--breadcrumb-end {
-  margin-right: 44px;
-  border: none;
-  border-right: 2px solid black;
-  border-radius: 0 10% 10% 0;
-}
-.navbar-container .navbar-button__breadcrumb-arrow-container {
-  position: relative;
-  float: left;
-  height: 56px;
-  width: 30px;
-}
-.navbar-container .navbar-button__breadcrumb-arrow-container__arrow {
-  z-index: 4;
-  position: absolute;
-  top: -1px;
-  left: 0px;
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;
-  border-left: 30px solid gray;
-  height: 0;
-  width: 0;
-}
-.navbar-container .navbar-button__breadcrumb-arrow-container__border-arrow {
-  z-index: 3;
-  position: absolute;
-  top: -1px;
-  left: 2px;
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;
-  border-left: 30px solid black;
-  height: 0;
-  width: 0;
-}
-.navbar-container .navbar-button__breadcrumb-arrow-container__border-arrow__close-button {
-  -webkit-touch-callout: none;
-  /* iOS Safari */
-  -webkit-user-select: none;
-  /* Safari */
-  -khtml-user-select: none;
-  /* Konqueror HTML */
-  -moz-user-select: none;
-  /* Old versions of Firefox */
-  -ms-user-select: none;
-  /* Internet Explorer/Edge */
-  user-select: none;
-  /* Non-prefixed version, currently
-  supported by Chrome, Edge, Opera and Firefox */
-  position: absolute;
-  top: -9px;
-  left: -32px;
-  color: silver;
-  opacity: 0.6;
-  font-size: 18px;
-  cursor: pointer;
-}
-.navbar-container .navbar-button__breadcrumb-arrow-container__border-arrow__close-button:hover, .navbar-container .navbar-button__breadcrumb-arrow-container__border-arrow__close-button:active {
-  opacity: 1;
-  color: #fc1e1e;
 }
 
 /*
@@ -387,8 +323,8 @@ dropdown can overlap all other components
   right: 0;
 }
 .breadcrumb-container .breadcrumb-button--breadcrumb-arrow-buffered {
-  margin-left: -30px;
-  padding-left: 30px;
+  margin-left: -20px;
+  padding-left: 20px;
 }
 .breadcrumb-container .breadcrumb-button__outer-text-container {
   position: relative;
@@ -409,7 +345,7 @@ dropdown can overlap all other components
   user-select: none;
   /* Non-prefixed version, currently
   supported by Chrome, Edge, Opera and Firefox */
-  margin: 18px 10px 0px 14px;
+  margin: 18px 14px 0px 14px;
   font-family: Verdana, Geneva, sans-serif;
   font-size: 18px;
   color: white;
@@ -420,47 +356,52 @@ dropdown can overlap all other components
 }
 .breadcrumb-container .breadcrumb-button__outer-text-container__inner-text-container--right {
   margin-right: 14px;
-  margin-left: 10px;
+  margin-left: 14px;
 }
 .breadcrumb-container .breadcrumb-button__outer-text-container__inner-text-container--item-name {
   color: #ffff00;
   font-style: italic;
 }
-.breadcrumb-container .breadcrumb-button__outer-text-container__inner-text-container--breadcrumb-end {
-  margin-right: 44px;
-  border: none;
-  border-right: 2px solid black;
-  border-radius: 0 10% 10% 0;
-}
-.breadcrumb-container .breadcrumb-button__breadcrumb-arrow-container {
+.breadcrumb-container .breadcrumb-button__end-container {
   position: relative;
   float: left;
   height: 56px;
-  width: 30px;
+  width: 20px;
 }
-.breadcrumb-container .breadcrumb-button__breadcrumb-arrow-container__arrow {
+.breadcrumb-container .breadcrumb-button__end-container__round-border {
+  z-index: 5;
+  position: absolute;
+  top: -2px;
+  left: -12px;
+  border: 2px solid black;
+  border-left: none;
+  border-radius: 0 100% 100% 0;
+  height: 56px;
+  width: 20px;
+}
+.breadcrumb-container .breadcrumb-button__end-container__arrow {
   z-index: 4;
   position: absolute;
-  top: -1px;
+  top: -2px;
+  left: -2px;
+  border-top: 30px solid transparent;
+  border-bottom: 30px solid transparent;
+  border-left: 20px solid gray;
+  height: 0;
+  width: 0;
+}
+.breadcrumb-container .breadcrumb-button__end-container__border-arrow {
+  z-index: 3;
+  position: absolute;
+  top: -2px;
   left: 0px;
   border-top: 30px solid transparent;
   border-bottom: 30px solid transparent;
-  border-left: 30px solid gray;
+  border-left: 20px solid black;
   height: 0;
   width: 0;
 }
-.breadcrumb-container .breadcrumb-button__breadcrumb-arrow-container__border-arrow {
-  z-index: 3;
-  position: absolute;
-  top: -1px;
-  left: 2px;
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;
-  border-left: 30px solid black;
-  height: 0;
-  width: 0;
-}
-.breadcrumb-container .breadcrumb-button__breadcrumb-arrow-container__border-arrow__close-button {
+.breadcrumb-container .breadcrumb-button__end-container__close-button {
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
@@ -474,15 +415,16 @@ dropdown can overlap all other components
   user-select: none;
   /* Non-prefixed version, currently
   supported by Chrome, Edge, Opera and Firefox */
+  z-index: 5;
   position: absolute;
-  top: -9px;
-  left: -32px;
+  top: 20px;
+  left: -8px;
   color: silver;
   opacity: 0.6;
   font-size: 18px;
   cursor: pointer;
 }
-.breadcrumb-container .breadcrumb-button__breadcrumb-arrow-container__border-arrow__close-button:hover, .breadcrumb-container .breadcrumb-button__breadcrumb-arrow-container__border-arrow__close-button:active {
+.breadcrumb-container .breadcrumb-button__end-container__close-button:hover, .breadcrumb-container .breadcrumb-button__end-container__close-button:active {
   opacity: 1;
   color: #fc1e1e;
 }
@@ -1556,7 +1498,9 @@ dropdown can overlap all other components
   z-index: 1;
   position: fixed;
   top: 56px;
-  border-bottom: 1px solid black;
+  border: 1px solid black;
+  border-left: none;
+  border-right: none;
   background-color: #e5e5e5;
   height: 46px;
   /* height: v.$search-filter-sort-bar-height; */
